--- a/res/layout/activity_parity_details.xml
+++ b/res/layout/activity_parity_details.xml
@@ -18,8 +18,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text=""
-                 />
+                android:text=""/>
         </LinearLayout>
 
         <LinearLayout
@@ -32,8 +31,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text=""
-                 />
+                android:text=""/>
         </LinearLayout>
 
         <LinearLayout
@@ -43,12 +41,12 @@
             android:paddingTop="@dimen/padding_medium" >
             
             
-               <ListView
+        <ListView
             android:id="@+id/parity_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
-             android:dividerHeight="20.0sp"
+            android:dividerHeight="20.0sp"
             android:layout_alignParentLeft="true" >
     </ListView>
     
