--- a/res/layout/parity_list.xml
+++ b/res/layout/parity_list.xml
@@ -13,15 +13,13 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Baby Name: "
-                 />
+                android:text="Baby Name: "/>
  
 	     <TextView
 		    android:id="@+id/baby_name_parity" 
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:inputType="text"
-		    />
+		    android:inputType="text"/>
 	  
     
  </LinearLayout>
@@ -36,11 +34,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Hospital Number: "
-                 />
+                android:text="Hospital Number: " />
   
-	
-	
+
 	<TextView
 	    android:id="@+id/hospital_number_parity" 
 	    android:layout_width="match_parent"
@@ -58,8 +54,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Date of Birth: "
-                 />
+                android:text="Date of Birth: "/>
  
  
       
@@ -82,8 +77,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Sex: "
-                 />
+                android:text="Sex: "/>
             
    
 	<TextView
@@ -103,8 +97,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Gestation: "
-                 />
+                android:text="Gestation: "/>
             
           
           
@@ -142,11 +135,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Weight (kg): "
-                 />
+                android:text="Birth Outcome: "/>
   
-	
-	
 	<TextView
 	    android:id="@+id/birth_outcome_parity" 
 	    android:layout_width="match_parent"
@@ -163,8 +153,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Birth outcome: "
-                 />
+                android:text="Weight (kg): "/>
   
 	
 	
