--- a/res/layout/activity_ante_natal.xml
+++ b/res/layout/activity_ante_natal.xml
@@ -216,7 +216,7 @@
             android:clickable="False"
             android:padding="5dip" >
             
-             <LinearLayout
+         <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
@@ -226,7 +226,7 @@
             <TextView
                 android:id="@+id/parity_ante_natal"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="@dimen/text_Xsmall" />
@@ -242,7 +242,6 @@
             
             
             <ImageView
-                    android:id="@+id/midwives_notes"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:adjustViewBounds="true"
