--- a/res/layout/activity_appointment_type_spinner.xml
+++ b/res/layout/activity_appointment_type_spinner.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ie.teamchile.smartapp.AppointmentTypeSpinnerActivity">
+    tools:context="ie.teamchile.smartapp.AppointmentTypeSpinnerActivity" >
 
     <Spinner
         android:id="@+id/appointment_spinner"
@@ -14,8 +14,7 @@
     <Spinner
         android:id="@+id/clinic_service_option_spinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/clinic_service_option" />
+        android:layout_height="wrap_content" />
 
     <Spinner
         android:id="@+id/visit_service_option_spinner"
@@ -37,8 +36,7 @@
     <Spinner
         android:id="@+id/day_spinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/days" />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/appointment_calendar_button"
