--- a/res/layout/activity_confirm_appointment.xml
+++ b/res/layout/activity_confirm_appointment.xml
@@ -126,12 +126,28 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_Xsmall" />
 
-    <Button
-        android:id="@+id/confirm_appointment"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding_medium"
-        android:background="@color/blue"
-        android:text="@string/confirm_appointment" />
+        android:orientation="horizontal"
+        android:weightSum="2.0" >
 
+        <Button
+            android:id="@+id/book_appointment"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_medium"
+            android:background="@color/blue"
+            android:text="@string/book_appointment"
+            android:layout_weight="1.0" />
+
+        <Button
+            android:id="@+id/patient_info"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_medium"
+            android:background="@color/blue"
+            android:text="Patient Info" 
+            android:layout_weight="1.0" />
+    </LinearLayout>
 </LinearLayout>
