fix bugs in service user search and change hint text

--- a/res/layout/activity_service_user_search.xml
+++ b/res/layout/activity_service_user_search.xml
@@ -9,31 +9,20 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/ssr_title"
+        android:paddingTop="@dimen/padding_medium"
+        android:text="@string/service_user_search_hint"
         android:textSize="@dimen/text_small" />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingRight="@dimen/padding_Xsmall"
-        android:weightSum="1.0" >
-
-        <Spinner
-            android:id="@+id/search_option"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.85"
-            android:hint="@string/enter_search"
-            android:paddingTop="@dimen/padding_medium" />
-
-    </LinearLayout>
     
-        <LinearLayout
+	<Spinner
+	    android:id="@+id/search_option"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:hint="@string/enter_search" />
+    
+	<LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingRight="@dimen/padding_Xsmall"
         android:weightSum="1.0" >
 
         <EditText
@@ -41,8 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.85"
-            android:hint="@string/enter_search"
-            android:paddingTop="@dimen/padding_medium" />
+            android:hint="@string/enter_search"/>
 
         <Button
             android:id="@+id/search"
@@ -50,8 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
             android:text="@string/btn_search" />
-    </LinearLayout>
-    
+    </LinearLayout>    
 
     <TextView
         android:layout_width="fill_parent"
@@ -63,5 +50,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ListView>
-
 </LinearLayout>
