--- a/res/layout/list_rows.xml
+++ b/res/layout/list_rows.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/padding_small"
-    android:paddingBottom="@dimen/padding_small"
     android:orientation="horizontal"
+    android:paddingBottom="@dimen/padding_small"
+    android:paddingTop="@dimen/padding_small"
     android:weightSum="3.0" >
 
     <TextView
@@ -13,17 +13,19 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.8"
         android:gravity="start|center"
-        android:textSize="@dimen/text_small" 
         android:paddingLeft="@dimen/padding_small"
-        android:paddingStart="@dimen/padding_small" />
+        android:paddingStart="@dimen/padding_small"
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.6"
+        android:ellipsize="end"
+        android:textAlignment="gravity"
         android:textSize="@dimen/text_small"
-        android:textAlignment="gravity" />
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/gestation"
@@ -31,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.6"
         android:gravity="end|center"
-        android:textSize="@dimen/text_small"
-        android:paddingRight="@dimen/padding_small" />
+        android:paddingRight="@dimen/padding_small"
+        android:textSize="@dimen/text_small" />
 
 </LinearLayout>
