--- a/res/layout/activity_service_user_search.xml
+++ b/res/layout/activity_service_user_search.xml
@@ -10,23 +10,50 @@
         android:id="@+id/search_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="@string/enter_name"
         android:paddingTop="@dimen/padding_medium"
-        android:singleLine="true"
-        android:hint="@string/enter_name" />
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/search_hospital_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:hint="@string/enter_hospital_number" />
+        android:hint="@string/enter_hospital_number"
+        android:singleLine="true" />
 
-    <EditText
-        android:id="@+id/search_dob"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:hint="@string/enter_dob" />
+        android:orientation="horizontal"
+        android:weightSum="3.0" >
+
+        <EditText
+            android:id="@+id/search_dob_day"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:hint="DAY"
+            android:inputType="number"
+            android:singleLine="true" />
+
+        <EditText
+            android:id="@+id/search_dob_month"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:hint="MONTH"
+            android:inputType="number"
+            android:singleLine="true" />
+
+        <EditText
+            android:id="@+id/search_dob_year"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:hint="YEAR"
+            android:inputType="number"
+            android:singleLine="true" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/search"
