--- a/res/layout/activity_parity_details.xml
+++ b/res/layout/activity_parity_details.xml
@@ -7,50 +7,31 @@
     android:gravity="center"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
-       <LinearLayout
+        <TextView
+            android:id="@+id/parity_info"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:gravity="center"
+            android:text="" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/parity_name"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=""/>
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/padding_small" >
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/parity_info"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=""/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/padding_medium" >
-            
-            
         <ListView
             android:id="@+id/parity_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:dividerHeight="20.0sp"
-            android:layout_alignParentLeft="true" >
-    </ListView>
-    
-  
-
+            android:layout_alignParentLeft="true"
+            android:dividerHeight="20.0sp" >
+        </ListView>
     </LinearLayout>
-    </LinearLayout>
+</LinearLayout>
