--- a/res/layout/activity_service_user.xml
+++ b/res/layout/activity_service_user.xml
@@ -8,6 +8,12 @@
     tools:context="${relativePackage}.${activityClass}" >
     
     
+  <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+</android.support.v4.view.ViewPager>
+    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
