--- a/res/layout/activity_post_natal.xml
+++ b/res/layout/activity_post_natal.xml
@@ -6,14 +6,12 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/padding_small"
-        android:gravity="center"
         android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
             <TextView
                 android:layout_width="fill_parent"
@@ -22,28 +20,22 @@
                 android:text="@string/mother_info"
                 android:textSize="@dimen/text_small"
                 android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/padding_medium"
-            android:gravity="bottom"
-            android:orientation="vertical" >
 
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="5dip" >
+                android:padding="5dp" 
+                android:weightSum="1.0" >
 
                 <TextView
                     android:id="@+id/birth_mode"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_medium"
+                    android:layout_weight="0.3" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -52,14 +44,15 @@
                     android:text="@string/birth_mode"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="@dimen/text_Xsmall"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="0.7"  />
             </TableRow>
 
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="5dip" >
+                android:padding="5dp" >
 
                 <TextView
                     android:id="@+id/perineum"
@@ -67,7 +60,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_medium" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -83,7 +76,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="5dip" >
+                android:padding="5dp" >
 
                 <TextView
                     android:id="@+id/anti_d"
@@ -91,7 +84,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_medium" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -107,17 +100,17 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="5dip"
+                android:padding="5dp"
                 android:weightSum="1.0" >
 
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.1"
-                    android:gravity="start"
+                    android:gravity="center_vertical"
                     android:text="@string/midwives_notes"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_medium" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -138,7 +131,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
             <TextView
                 android:layout_width="fill_parent"
@@ -148,28 +141,21 @@
                 android:text="@string/baby_info"
                 android:textSize="@dimen/text_small"
                 android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/padding_medium"
-            android:gravity="bottom"
-            android:orientation="vertical" >
 
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" 
+                android:weightSum="1.0" >
 
                 <TextView
                     android:id="@+id/date_of_delivery"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small"
+					android:layout_weight="0.45"/>
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -178,14 +164,14 @@
                     android:text="@string/delivery_date"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="@dimen/text_Xsmall"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="0.55" />
             </TableRow>
 
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/time_of_delivery"
@@ -193,7 +179,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -208,8 +194,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/days_since_birth"
@@ -217,7 +202,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -232,8 +217,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/sex_of_baby"
@@ -241,7 +225,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -256,8 +240,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/birth_weight"
@@ -265,7 +248,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -280,8 +263,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/vitk"
@@ -289,7 +271,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -304,8 +286,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/hearing"
@@ -313,7 +294,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -328,8 +309,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/feeding"
@@ -337,7 +317,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -352,8 +332,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:padding="5dip" >
+                android:background="@drawable/border" >
 
                 <TextView
                     android:id="@+id/nbst"
@@ -361,7 +340,7 @@
                     android:layout_height="match_parent"
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_Xsmall" />
+                    android:textSize="@dimen/text_small" />
 
                 <TextView
                     android:layout_width="fill_parent"
