--- a/res/layout/activity_service_user_search.xml
+++ b/res/layout/activity_service_user_search.xml
@@ -24,8 +24,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/dob"/>
+        android:gravity="left"
+        android:textStyle="bold"
+        android:text="@string/dob"
+        android:textSize="@dimen/text_small" />
     
     <LinearLayout
         android:layout_width="match_parent"
